# rust-adventofcode

./: .gitignore  Cargo.toml
adventofcode-2024/: .envrc-example  .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
adventofcode-2024/aoc-2024-wasm/: Cargo.toml  Trunk.toml  index.html  package.json  rustfmt.toml  tailwind.config.js  testcases.toml
adventofcode-2024/aoc-2024-wasm/src/: app.rs  lib.rs  main.rs  run_tasks_component.rs  testcases.rs
adventofcode-2024/aoc-2024-wasm/src/components/: lib.rs  mod.rs  own_input_manager.rs
adventofcode-2024/aoc-2024-wasm/src/components/common/: button.rs
adventofcode-2024/aoc-2024-wasm/style/: tailwind.css
adventofcode-2024/daily-template/: Cargo.toml
adventofcode-2024/daily-template/benches/: benchmark.rs  benchmarks.rs
adventofcode-2024/day-01/: Cargo.toml
adventofcode-2024/day-01/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-02/: Cargo.toml
adventofcode-2024/day-02/benches/: benchmarks.rs
adventofcode-2024/day-02/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-03/: Cargo.toml
adventofcode-2024/day-03/benches/: benchmarks.rs
adventofcode-2024/day-03/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-04/: Cargo.toml
adventofcode-2024/day-04/benches/: benchmarks.rs
adventofcode-2024/day-04/src/: part1.rs  part2.rs
adventofcode-2024/day-05/: Cargo.toml
adventofcode-2024/day-05/benches/: benchmarks.rs
adventofcode-2024/day-05/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-06/: Cargo.toml
adventofcode-2024/day-06/benches/: benchmarks.rs
adventofcode-2024/day-06/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-07/: Cargo.toml
adventofcode-2024/day-07/benches/: benchmarks.rs
adventofcode-2024/day-07/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-08/: Cargo.toml
adventofcode-2024/day-08/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-09/: Cargo.toml
adventofcode-2024/day-09/src/: part1.rs  part2.rs
adventofcode-2024/day-10/: Cargo.toml
adventofcode-2024/day-10/src/: part1.rs  part2.rs
adventofcode-2024/day-11/: Cargo.toml
adventofcode-2024/day-11/src/: part1.rs  part2.rs
adventofcode-2024/day-12/: Cargo.toml
adventofcode-2024/day-12/src/: part1.rs  part2.rs
adventofcode-2024/day-13/: Cargo.toml
adventofcode-2024/day-13/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-14/: Cargo.toml  robots.txt
adventofcode-2024/day-14/benches/: benchmarks.rs
adventofcode-2024/day-14/src/: part1.rs  part2.rs
adventofcode-2024/day-15/: Cargo.toml
adventofcode-2024/day-15/benches/: benchmarks.rs
adventofcode-2024/day-15/src/: part1.rs  part2.rs
adventofcode-2024/day-16/: Cargo.toml
adventofcode-2024/day-16/benches/: benchmarks.rs
adventofcode-2024/day-16/src/: part1.rs  part2.rs
adventofcode-2024/day-17/: Cargo.toml
adventofcode-2024/day-17/benches/: benchmarks.rs
adventofcode-2024/day-17/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-18/: Cargo.toml
adventofcode-2024/day-18/benches/: benchmarks.rs
adventofcode-2024/day-18/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-19/: Cargo.toml
adventofcode-2024/day-19/benches/: benchmarks.rs
adventofcode-2024/day-19/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-20/: Cargo.toml
adventofcode-2024/day-20/benches/: benchmarks.rs
adventofcode-2024/day-20/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-21/: Cargo.toml
adventofcode-2024/day-21/benches/: benchmarks.rs
adventofcode-2024/day-21/src/: lib.rs  part1.rs  part2.rs
adventofcode-2024/day-22/: Cargo.toml  day-22.bench.txt
adventofcode-2024/day-22/benches/: alloc.rs  benchmarks.rs
adventofcode-2024/day-22/src/: part1.rs  part2.rs
adventofcode-2024/day-23/: Cargo.toml
adventofcode-2024/day-23/benches/: benchmarks.rs
adventofcode-2024/day-23/src/: part1.rs  part2.rs
adventofcode-2024/day-24/: Cargo.toml  aoc-2024-day-24-part-2-analysis.txt  day-24.bench-alloc.txt  graph.dot
adventofcode-2024/day-24/benches/: alloc.rs  benchmarks.rs
adventofcode-2024/day-24/src/: lib.rs  part1.rs  part2.rs  part2_rewrite.rs
adventofcode-2024/day-25/: Cargo.toml
adventofcode-2024/day-25/benches/: benchmarks.rs
adventofcode-2024/day-25/src/: part1.rs
adventofcode-2024/frontend/: TODO.md  index.html  package.json  vite.config.ts
adventofcode-2024/frontend/src/: main.ts  solver.ts  types.ts
adventofcode-2024/scripts/: get-aoc-input.rs
src/: helpers.rs  main.rs  parsers.rs
src/aoc_2024/day_01/: mod.rs
src/aoc_2024/day_02/: mod.rs
src/helpers/: mod.rs
src/parsers/: mod.rs
