[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
glam = "0.29.0"
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rstest = "0.23.0"
rstest_reuse = "0.7.0"
divan = "0.1.7"
miette = { version = "7.4", features = ["fancy"] }
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
thiserror = "2.0.3"
pathfinding = "4.11.0"
cached = "0.54.0"

assert_unordered = "0.3.5"
