[workspace]
resolver = "2"

members = ["day-*", "aoc-2024-wasm"]
default-members = ["day-*"]

[workspace.dependencies]
nom = "7.1.3"
glam = "0.29.0"
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rstest = "0.23.0"
divan = "0.1.7"
miette = { version = "7.4", features = ["fancy"] }
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
pathfinding = "4.11.0"
cached = "0.54.0"
petgraph = "0.6.5"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }


assert_unordered = "0.3.5"

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.19" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
