[package]
name = "aoc-2024-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }
miette = { workspace = true }

# Reference all your day crates
day-01 = { path = "../day-01" }
day-02 = { path = "../day-02" }
day-03 = { path = "../day-03" }
day-04 = { path = "../day-04" }
day-05 = { path = "../day-05" }
day-06 = { path = "../day-06" }
day-07 = { path = "../day-07" }
day-08 = { path = "../day-08" }
day-09 = { path = "../day-09" }
day-10 = { path = "../day-10" }
day-11 = { path = "../day-11" }
day-12 = { path = "../day-12" }
day-13 = { path = "../day-13" }
day-14 = { path = "../day-14" }
day-15 = { path = "../day-15" }
day-16 = { path = "../day-16" }
day-17 = { path = "../day-17" }
day-18 = { path = "../day-18" }
day-19 = { path = "../day-19" }
day-20 = { path = "../day-20" }
day-21 = { path = "../day-21" }
day-22 = { path = "../day-22" }
day-23 = { path = "../day-23" }
day-24 = { path = "../day-24" }
day-25 = { path = "../day-25" }
