[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
wasm-bindgen.workspace = true
petgraph.workspace = true
rand.workspace = true
getrandom.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-24-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-24-alloc"
path = "benches/alloc.rs"
harness = false
